--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>jakarta.platform</groupId>
+			<artifactId>jakarta.jakartaee-api</artifactId>
+			<version>10.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<!--	<build>-->
